<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/explore_graph"
        android:enabled="true"
        android:icon="@drawable/ic_search_24"
        android:title="@string/profiles_explore_uppercase"/>


    <item
        android:id="@+id/notifications_graph"
        android:enabled="true"
        android:icon="@drawable/ic_heart_24"
        android:title="@string/matches_title_uppercase"/>


    <item
        android:id="@+id/chats_graph"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chats_title_uppercase"
        />


    <item
        android:id="@+id/profile_graph"
        android:enabled="true"
        android:icon="@drawable/ic_my_profile"
        android:title="@string/profile_title_uppercase"/>


</menu>