<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="model"
            type="com.org.datingapp.features.onboarding.description.DescriptionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.home.profile.edit.description.EditDescriptionFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:titleCentered="true">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/action_edit_description"
                app:titleCentered="true"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:navigationIconTint="@color/white"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/prompt_on_boarding_description_hint"
            app:errorEnabled="true"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:endIconMode="custom"
            app:counterEnabled="true"
            app:counterMaxLength="150"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="150"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={model.description}"
                android:inputType="textMultiLine|textShortMessage" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/action_edit"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/action_cancel"
            app:cornerRadius="16dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
